<resources>
    <string name="app_name">Geocoder</string>
    <string name="Lundi">Lundi</string>
    <string name="Mardi">Mardi</string>
    <string name="Mercredi">Mercredi</string>
    <string name="Jeudi">Jeudi</string>
    <string name="Vendredi">Vendredi</string>
    <string name="Samedi">Samedi</string>
    <string name="Dimanche">Dimanche</string>
    <string name="Week_End">Week-End</string>
    <string name="Inclu">ALARME\nWEEK-END</string>
    <string name="Ferie">Jours Férié Congés</string>
    <string name="Plage">Selectionnez la plage horaire semaine : </string>
    <string name="time_picker_morning">Matin</string>
    <string name="time_picker_afternoon">Après midi</string>
    <string name="Heure_actuelle">.</string>
    <string name="Geocoder">GéoCoder Alert</string>
    <string name="To">à</string>
    <string name="matin">09h00</string>
    <string name="après_midi">18h00</string>
    <string name="confirm">Confirmer \n les \n modifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed"</string>
    <string name="erreur_login">Erreur de connexion</string>
    <string name="horaire_sauvegardé">Horaire Sauvegardé</string>
    <string name="téléphone_erreur">Erreur numéro de téléphone</string>
    <string name="completez_tout_les_champs">Complétez tout les champs</string>
    <string name="retour_confirmation">Appuyez une seconde fois pour quitter</string>
    <string name="jour_ajouté">ajouté</string>
    <string name="jour_supprimé">supprimé</string>
    <string name="ajouter_journée">Ajoutez un jour</string>
</resources>
