<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Geocoder"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/cleverborder"
        android:shadowColor="@color/clever2"
        android:shadowDx="90"
        android:fontFamily="sans-serif-medium"/>

    <Button
        android:id="@+id/ferie"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-55dp"
        android:textSize="12sp"
        android:text="@string/Ferie"
        android:background="@drawable/border_calendar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/calendar_monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="3dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/Lundi"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMonday1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/border_calendar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/matin" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/To"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMonday2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/border_calendar"
            android:text="@string/après_midi" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calendar_tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/calendar_monday"
        android:layout_marginBottom="3dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/Mardi"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonTuesday1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/border_calendar"
            android:text="@string/matin" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/To"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonTuesday2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/border_calendar"
            android:text="@string/après_midi" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/calendar_wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/calendar_tuesday"
        android:gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/Mercredi"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonWednesday1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:background="@drawable/border_calendar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/matin" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/To"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonWednesday2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_calendar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/après_midi" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calendar_thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/calendar_wednesday"
        android:gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/Jeudi"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonThursday1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/border_calendar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/matin" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/To"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonThursday2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_calendar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/après_midi" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calendar_friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/calendar_thursday"
        android:gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/Vendredi"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonFriday1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/border_calendar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/matin" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/To"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonFriday2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_calendar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/après_midi" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calendar_saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/calendar_friday"
        android:gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/Samedi"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSaturday1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/border_calendar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/matin" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/To"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSaturday2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_calendar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/après_midi" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calendar_sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/calendar_saturday"
        android:gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/Dimanche"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSunday1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/border_calendar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/matin" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/To"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSunday2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_calendar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/après_midi" />
    </LinearLayout>

    <Switch
        android:id="@+id/switchWe"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:switchPadding="20dp"
        android:text="@string/Inclu"
        android:textSize="12sp"
        android:thumbTint="@color/clever2" />

    <LinearLayout
        android:id="@+id/week_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_horizontal|center_vertical">

        <TextView
            android:id="@+id/plage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/Plage" />
        <Button
            android:id="@+id/buttonWeekDay"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/time_picker_morning"
            android:textSize="12sp"
            android:background="@drawable/border_calendar"
            android:layout_marginStart="5dp" />
        <Button
            android:id="@+id/buttonWeekDay2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/time_picker_afternoon"
            android:textSize="12sp"
            android:background="@drawable/border_calendar"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border_calendar"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:padding="5dp" />
    </LinearLayout>

</LinearLayout>